# bbwarden

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/account/: mod.rs
src-tauri/src/commands/: application.rs  database.rs  mod.rs
src-tauri/src/states/: mod.rs
src-tauri/src/utils/: funcs.rs  mod.rs
src/components/: Greet.vue  Login.vue
src/components/tresor/: Tresor.vue  TresorEntry.vue
src/scss/: styles.scss
src/services/: ToastManager.vue
